<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/overlay_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:contentDescription="@string/overlay_image_cdesc"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:scaleType="fitStart"
            android:src="@drawable/sitewhere_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/overlay_lat_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/overlay_lat_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overlay_lat_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35" />

            <TextView
                android:id="@+id/overlay_rotx_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/overlay_rotx_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overlay_rotx_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/overlay_lon_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/overlay_lon_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overlay_lon_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35" />

            <TextView
                android:id="@+id/overlay_roty_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/overlay_roty_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overlay_roty_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/overlay_alt_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/overlay_alt_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overlay_alt_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35" />

            <TextView
                android:id="@+id/overlay_rotz_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/overlay_rotz_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overlay_rotz_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>